# task1_RationalLib_osvn

./: CMakeLists.txt  README.md  main.cpp  rational.cpp  rational.h  rational_test.cpp
